fix(Project-1): Fix pixelperfect missalignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -248,11 +248,6 @@ section.component3 div.cons div.inner {
     align-items: center;
 }
 
-section.component3 div.cons div.inner i {
-    color: #A1B1BC;
-    font-size: 20px;
-}
-
 /* Section four */
 
 section.component4 {
@@ -614,6 +609,8 @@ section.component7 header p {
 section.component7 > div {
     border-top: solid 1px #ECF0F1;
     border-bottom: solid 1px #ECF0F1;
+    border-bottom-width: 3px;
+    border-bottom-style: double;
     text-align: left;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -647,8 +644,7 @@ section.component7 section.grid {
     width: 100%;
     height: 400px;
     display: grid;
-    border-top: solid 1px #ECF0F1;
-    margin-top: 53px;
+    margin-top: 51px;
     margin-bottom: 100px;
 }
 
